# Aura

./: .gitmodules  README.md  README.zh-CN.md  llm.py  pubspec.yaml  relay_server.py  speech_to_text.py  test_model.py  text_to_speech.py
app/: .gitignore  README.md  pubspec.yaml
docs/: Network Configuration.md  (+1 more)
gateway/: .gitignore  ARCHITECTURE_CLASS_DIAGRAM.md  README.md  REFACTOR_ANALYSIS.md  aura_client_test.py  aura_server.py  auth.py  channels.py  config.py  config.yaml  conversation.py  core.py  heartbeat.py  llm.py  pipeline.py  pyproject.toml  server.py  session.py  stages.py  text_to_speech.py
gateway/.VSCodeCounter/2026-04-28_22-29-24/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
gateway/aura/: __init__.py  aura_client_test.py  auth.py  channels.py  config.py  config.yaml  core.py  heartbeat.py  llm.py  pipeline.py  server.py  session.py  stages.py
gateway/aura/tools/searching/: searching.py  searxng.py
gateway/aura/tools/speech_to_text/: speech_to_text.py  whisper.py
gateway/aura/tools/text_to_speech/: cosyvoice.py  edgetts.py  text_to_speech.py
gateway/aura/utils/: __init__.py  cache.py  mitertools.py  mlogging.py  polymorphic.py  runtime_tool.py
gateway/tools/: __init__.py
gateway/tools/searching/: __init__.py  searching.py  searxng.py
gateway/tools/speech_to_text/: __init__.py  speech_to_text.py  whisper.py
gateway/tools/text_to_speech/: __init__.py  cosyvoice.py  edgetts.py  text_to_speech.py
gateway/utils/: cache.py  config_tool.py  polymorphic.py  runtime_tool.py
(+15 files in other folders)
