[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.21.0.82",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typeguard>=4.5.1",
    "uvicorn>=0.44.0",
]
